meego-im-framework (0.20.1~1) unstable; urgency=low

  * [UNRELEASED]

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:24:00 +0200

meego-im-framework (0.20.0-1) unstable; urgency=low

  * New: Remove LMT dependencies from public API

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:24:00 +0200

meego-im-framework (0.19.47-1) unstable; urgency=low

  * Implemented attribute extension machinery.
  * New API: MAbstractInputMethod::setKeyOverrides
  * Fixes: NB#223052 - Unreadable fonts in Text input settings (superseeds old fix)

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:01:00 +0200

meego-im-framework (0.19.46-1) unstable; urgency=low

  * Fixes: NB#230421 - Settings plugin needs to be moved to Time & language category
  * Fixes: NB#223052 - Unreadable fonts in Text input settings

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:55:31 +0200

meego-im-framework (0.19.45-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:46:34 +0200

meego-im-framework (0.19.44-1) unstable; urgency=low

  * Fix: small window shown at initial run.
  * Fixes: NB#215925 - Text input setting can not be opened from Search application


 -- huaming wang <huaming.wang@nokia.com>  Wed, 23 Feb 2011 11:36:28 +0200

meego-im-framework (0.19.43-1) unstable; urgency=low

  * New Release

 -- huaming wang <huaming.wang@nokia.com>  Thu, 17 Feb 2011 14:39:31 +0200

meego-im-framework (0.19.42-1) unstable; urgency=low

  * Fixes: NB#224974 - Virtual keyboard should be self-composited

 -- huaming wang <huaming.wang@nokia.com>  Thu, 17 Feb 2011 11:34:34 +0200

meego-im-framework (0.19.41-1) unstable; urgency=low

  * Changes: pass X key event times to im server and plugins

 -- huaming wang <huaming.wang@nokia.com>  Thu, 03 Feb 2011 10:27:23 +0200

meego-im-framework (0.19.40-1) unstable; urgency=low

  * New release
