@@ -140,6 +140,10 @@ MInputContext::MInputContext(QObject *parent)
             this, SLOT(notifyOrientationAboutToChange(M::OrientationAngle)));
 
     connect(MInputMethodState::instance(),
+            SIGNAL(activeWindowOrientationAngleAboutToChange(M::OrientationAngle)),
+            this, SLOT(notifyOrientationAboutToChange(M::OrientationAngle)));
+
+    connect(MInputMethodState::instance(),
             SIGNAL(activeWindowOrientationAngleChanged(M::OrientationAngle)),
             this, SLOT(notifyOrientationChanged(M::OrientationAngle)));
 
